Add id to VariantEvaluation.toString